[#2058] fix content name overflow ellipsis on firefox

--- a/frontend/src/component/Workspace/Folder.styl
+++ b/frontend/src/component/Workspace/Folder.styl
@@ -100,6 +100,8 @@ folderopen()
       color darkGrey
       text-align center
     &__name
+      flex 1
+      width 0 // INFO - CH - 2019-07-04 - this allows the text-overflow ellipsis
       margin 0 15px 0 0
       padding 5px
       white-space nowrap
